Organize to prepare publishing

--- a/package.json
+++ b/package.json
@@ -2,14 +2,7 @@
   "name": "react-native-animated-segmented-control",
   "version": "0.0.1",
   "description": "Animated segmented control for react native.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/shiningjason1989/react-native-animated-segmented-control.git"
-  },
+  "main": "AnimatedSegmentedControl.js",
   "keywords": [
     "react",
     "react-native",
@@ -21,10 +14,14 @@
     "segmented",
     "segmented-control"
   ],
-  "author": "Jason Chung <shiningjason1989@gmail.com> https://github.com/shiningjason1989",
-  "license": "MIT",
+  "homepage": "https://github.com/shiningjason1989/react-native-animated-segmented-control#readme",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/shiningjason1989/react-native-animated-segmented-control.git"
+  },
   "bugs": {
     "url": "https://github.com/shiningjason1989/react-native-animated-segmented-control/issues"
   },
-  "homepage": "https://github.com/shiningjason1989/react-native-animated-segmented-control#readme"
+  "author": "Jason Chung <shiningjason1989@gmail.com> https://github.com/shiningjason1989",
+  "license": "MIT"
 }
